# ai-interview-intelligence

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.gitgub/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/models/: interview_models.py
app/services/: interview_analysis.py  transcription.py
scripts/: process_interview.py
